composer.json update

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "giko/pinyin-bundle",
     "type": "symfony-bundle",
     "description": "Get the Pinyin from Chinese",
-    "keywords": ["Chinese, Pinyin"],
+    "keywords": ["Chinese", "Pinyin"],
     "homepage": "https://github.com/gikoluo/",
     "license": "MIT",
     "authors": [
